# HandsFreeFishing

./: LICENSE.md  README.md  fin_clipping.py  post_process_example_fish.py  post_processing.py  preprocess_example_fish.py  preprocessing.py  pyproject.toml  requirements.txt  run_example_fish.py  weight_prediction_092025.pkl
HandsFreeFishing/: __init__.py  fin_clipping.py  preprocessing.py
examples/: figure_scripts.py  post_process_example_fish.py  post_process_small_example.py  preprocess_example_fish.py  preprocess_small_example.py  run_example_fish.py  run_small_example.py
examples/spreadsheets/: example_fish.xlsx
templates/: IMG_2937_grid_template.tif
